# SAM-Foundation-Models

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CURRENT_STATUS.md  DEVELOPMENT.md  GITHUB_WORKFLOW_SETUP.md  LICENSE  Makefile  README.md  SETUP_INSTRUCTIONS.md  lessons-learned.md  pyproject.toml
.github/: CI_WORKFLOW_INSTRUCTIONS.md  REPOSITORY_SETUP.md
src/: __about__.py
src/awesome_sam/: __init__.py  utils.py
tests/: __init__.py  test_utils.py
